--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Etiquette'
 - !lcc 'BJ'
+- GITenberg
 title: Martine's Hand-book of Etiquette, and Guide to True Politeness
 url: http://www.gutenberg.org/ebooks/36048
